force-app/main/default/objects/RC_SMS_Record__c/RC_SMS_Record__c.object-meta.xml
<CustomObject>
    <label>RC SMS Record</label>
    <nameField>
        <displayFormat>SMS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC SMS Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>