force-app/main/default/objects/RC_SMS_Record__c/fields/From_Phone__c.field-meta.xml
<CustomField>
    <fullName>From_Phone__c</fullName>
    <label>From Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>