force-app/main/default/objects/RC_SMS_Record__c/fields/RC_SMS_Thread__c.field-meta.xml
<CustomField>
    <fullName>RC_SMS_Thread__c</fullName>
    <label>RC SMS Thread</label>
    <referenceTo>RC_SMS_Thread__c</referenceTo>
    <relationshipLabel>RC SMS Records</relationshipLabel>
    <relationshipName>RC_SMS_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>