force-app/main/default/objects/RC_SMS_Record__c/fields/Read_Status__c.field-meta.xml
<CustomField>
    <fullName>Read_Status__c</fullName>
    <label>Read Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Unread</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>