force-app/main/default/objects/RC_SMS_Record__c/fields/Record_Url__c.field-meta.xml
<CustomField>
    <fullName>Record_Url__c</fullName>
    <label>Record Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>