force-app/main/default/objects/RC_SMS_Record__c/fields/SMS_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Id__c</fullName>
    <label>SMS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>