force-app/main/default/objects/RC_SMS_Record__c/fields/To_Phone__c.field-meta.xml
<CustomField>
    <fullName>To_Phone__c</fullName>
    <label>To Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>